Полностью реализовал CRUD для user + flower, документация
