# internal/models/flower.go
@@ -8,3 +8,19 @@ type Flower struct {
 	Price       float64 `json:"price" db:"price" binding:"required"`
 	Stock       int     `json:"stock" db:"stock" binding:"required"`
 }
+
+type UpdateNameInput struct {
+	NewName string `json:"new_name" binding:"required"`
+}
+
+type UpdateDescriptionInput struct {
+	NewDescription string `json:"new_description" binding:"required"`
+}
+
+type UpdatePriceInput struct {
+	NewPrice float64 `json:"new_price" binding:"required"`
+}
+
+type UpdateStockInput struct {
+	NewStock int `json:"new_stock" binding:"required"`
+}
